<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dommo</string>
    <string name="action_settings">Settings</string>
    
	<string name="log_in_email_hint">example@email.com</string>
	<string name="log_in_password_hint">********</string>
	<string name="log_in_remember_password">Remember My Password</string>
	<string name="log_in_log_in">Log In</string>
	<string name="log_in_sign_up">Sign Up</string>
	<string name="log_in_forgot">Forgot my password</string>
	
	<string name="sign_up_first_name">First name</string>
	<string name="sign_up_last_name">Last name</string>
	<string name="sign_up_email">Email Address</string>
	<string name="sign_up_password">Password</string>
	<string name="sign_up_password_confirm">Confirm password</string>
	<string name="sign_up_sign_up">Sign Up</string>
	
	<string name="forgot_password_description">Enter the email</string>
	<string name="forgot_password_email">Email</string>
	<string name="forgot_password_send">Send</string>
    
</resources>
