<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.main.dommo.LogInActivity" >
    
    <EditText 
        android:id="@+id/logInEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:ems="12"
        android:hint="@string/log_in_email_hint" 
        android:inputType="textEmailAddress"/>
    
    <EditText
        android:id="@+id/logInPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logInEmail"
    	android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:ems="12"
        android:hint="@string/log_in_password_hint" 
        android:inputType="textPassword"/>
    
    <CheckBox
        android:id="@+id/logInRememberPasswordBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    	android:layout_below="@id/logInPassword"
		android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:text="@string/log_in_remember_password" />
    
    <Button 
        android:id="@+id/logInLogInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logInRememberPasswordBox"
    	android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:ems="12"
        android:text="@string/log_in_log_in" />
    
    <Button 
        android:id="@+id/logInSignUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logInLogInButton"
    	android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:ems="12"
        android:text="@string/log_in_sign_up" />
    
    <Button
        android:id="@+id/logInForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:ems="8"
        android:text="@string/log_in_forgot" />
    
    <TextView
        android:id="@+id/logInError"
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:textColor="#000000"
        android:layout_below="@id/logInForgot"
        android:layout_alignParentRight="true"/>
</RelativeLayout>
