<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="main.dommo.SignUpActivity" >


	<View 
	   android:id="@+id/spacer"
       android:layout_width="0dp"
       android:layout_height="0dp" 
       android:layout_centerInParent="true"/>
    
    <EditText
        android:id="@+id/signUpFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@id/spacer"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:ems="12"
        android:hint="@string/sign_up_first_name"
        android:inputType="text" >
    </EditText>
    
    
    <EditText
        android:id="@+id/signUpLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/spacer"
        android:layout_alignParentRight="true"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:ems="12"
        android:hint="@string/sign_up_last_name"
        android:inputType="text" >
    </EditText>
    
    <EditText
        android:id="@+id/signUpEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUpLastName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:ems="12"
        android:hint="@string/sign_up_email"
        android:inputType="textEmailAddress" >
    </EditText>
    
    <EditText
        android:id="@+id/signUpPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUpEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:ems="12"
        android:hint="@string/sign_up_password"
        android:inputType="textPassword" >
    </EditText>
    
    <EditText
        android:id="@+id/signUpPasswordConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUpPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:ems="12"
        android:hint="@string/sign_up_password_confirm" 
        android:inputType="textPassword">
    </EditText>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUpPasswordConfirm"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_up_sign_up" />

</RelativeLayout>