<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.main.dommo.ForgotPasswordActivity" >
    
    <TextView 
        android:id="@+id/forgotPasswordDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/forgot_password_description"
        android:gravity="center"/>
    
    <EditText
        android:id="@+id/forgotPasswordEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotPasswordDescription"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:hint="@string/forgot_password_email" 
        android:inputType="textPassword"/>
    
    <Button 
        android:id="@+id/forgotPasswordSend"
    	android:layout_below="@id/forgotPasswordEmail" 
    	android:layout_centerHorizontal="true"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/forgot_password_send"/>
    
</RelativeLayout>
